[fix] testやposts_controllerの修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,15 +1,20 @@
 ja:
   activerecord:
     errors:
-       messages:
-         record_invalid: 'バリデーションに失敗しました: %{errors}'
+      messages:
+        record_invalid: 'バリデーションに失敗しました: %{errors}'
   models:
   attributes:
-      full_name: フルネーム
-      user_name: ユーザーネーム
-      email: メールアドレス
-      password: パスワード
-      password_confirmation: 再入力パスワード
-      image_file: 画像
-      message: メッセージ
-      images: 画像
+    full_name: フルネーム
+    user_name: ユーザーネーム
+    email: メールアドレス
+    password: パスワード
+    password_confirmation: 再入力パスワード
+    image_file: 画像
+    message: メッセージ
+    images: 画像
+  errors:
+    messages:
+      extension_whitelist_error: の形式が違います
+
+
